--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-html body {
+body {
   background: linear-gradient(90deg, #07091a, #010101) !important;
   width: 100%;
   height: auto !important;
