--- a/Components/Project/Swiper_style.css
+++ b/Components/Project/Swiper_style.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #14213d;
+  /* background: #14213d; */
 }
 
 .wave {
