--- a/Components/Footer/Footer.css
+++ b/Components/Footer/Footer.css
@@ -12,7 +12,7 @@
   margin-top: 20px;
 }
 .footer-item a {
-  font-size: 18px !important;
+  font-size: 16px !important;
   font-weight: 700;
   line-height: 30px;
   text-transform: uppercase;
@@ -40,9 +40,9 @@
     margin-top: 20px;
     font-size: 25px !important;
   }
-  .footer-item a {
+  .footer-item .footer-link {
     font-size: 14px !important;
-    font-weight: 500;
+    font-weight: 400;
   }
   .footer-logo-text {
     font-size: 25px !important;
