--- a/Components/Home/Banner/Banner.css
+++ b/Components/Home/Banner/Banner.css
@@ -2,6 +2,13 @@
   width: 100%;
 }
 
+.banner-animation-title {
+  font-size: 30vh;
+  color: #ffffff37;
+  position: absolute;
+  z-index: 10;
+  bottom: -80px;
+}
 /* TextChangeAnimation.css */
 
 .text-box {
