--- a/Components/Home/Banner/Banner.css
+++ b/Components/Home/Banner/Banner.css
@@ -115,7 +115,7 @@
   width: 75px;
   height: 72px;
 
-  background: #cf7500;
+  background: #ff7b00;
   border-radius: 0;
   transform: translateY(0) scaleY(1);
   transition: all 0.6s ease;
