--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Cairo+Play:wght@600;900&family=Fira+Code:wght@500&family=Fira+Sans:ital,wght@1,300&family=Hind+Madurai:wght@300;400&family=Playfair+Display&family=REM:wght@100;600&family=Raleway:wght@700&family=Roboto:ital,wght@0,400;1,500&family=Work+Sans:ital,wght@0,200;0,300;0,400;0,500;1,400&display=swap");
+/* -------------- navbar --------------- */
+.logo-font {
+  font-family: "Roboto", sans-serif;
+}
+
 body {
   background: linear-gradient(90deg, #07091a, #010101) !important;
   width: 100%;
